--- a/src/app/components/mini/main-text/main-text.component.scss
+++ b/src/app/components/mini/main-text/main-text.component.scss
@@ -1,7 +1,4 @@
-div.container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+div.text-container{
 
     div.left-side{
         position: absolute;
@@ -16,12 +13,6 @@ div.container{
         margin-right: 15px;
     }
 
-    .green-text{
-        background-color: #3CD2B7;
-        background-clip: text;
-        text-shadow: 0px 4px 4px rgba(255,255,255,.5);
-        color: transparent;
-    }
 
     div.right-side{
         position: absolute;
