Update home component's mobile view with scrollable class.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="getToken() == null" class="container">
+<div *ngIf="getToken() == null" class="container not-scrollable">
     <div class="left_side">
         <app-main-text 
         leftText="We love your taste of music."
