--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,6 +2,10 @@ div.left_side{
     background-color: #f1f1e6;
 }
 
+.not-scrollable{
+    overflow: hidden;
+}
+
 @media only screen and (max-width: 600px) {
     // Mobile
     div.container{
@@ -9,7 +13,6 @@ div.left_side{
         height: 100vh;
         top: 50%;
         left: 50%;
-        overflow: hidden;
         transform: translate(-50%,-50%);
         overflow-x: hidden;
         width: 100vw;
