Update background color

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,9 @@
 div.left_side{
     background-color: #f1f1e6;
 }
+div.container{
+    background-color: #f1f1e6;
+}
 
 .not-scrollable{
     overflow: hidden;
