--- a/src/app/components/artists-display/artists-display.component.scss
+++ b/src/app/components/artists-display/artists-display.component.scss
@@ -1,71 +1,150 @@
-div.container{
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-
-
-    .profile_img_bg{
-        position: absolute;
-        left: 50%;
-        width: 50%;
+@media only screen and (min-width: 601px)
+{
+    div.container{
+        position: relative;
+        width: 100vw;
         height: 100vh;
-        filter: blur(8px);
-    }
 
-    .profile_img_fg{
-        position: absolute;
-        left: 75%;
-        width: 25%;
-        height: 25vw;
-        top: 50%;
-        transform: translate(-50%,-50%);
-    }
 
-    .infos{
-        text-align: center;
-        justify-content: center;
+        .profile_img_bg{
+            position: absolute;
+            left: 50%;
+            width: 50%;
+            height: 100vh;
+            filter: blur(8px);
+        }
+
+        .profile_img_fg{
+            position: absolute;
+            left: 75%;
+            width: 25%;
+            height: 25vw;
+            top: 50%;
+            transform: translate(-50%,-50%);
+        }
+
+        .infos{
+            text-align: center;
+            justify-content: center;
+            position: relative;
+            width: 50vw;
+            height: 50vh;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .followers{
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            font-family: Main;
+            font-size: 3vh;
+            color: gray;
+        }
+
+        .artist_name{
+            position: relative;
+            text-align: center;
+            font-family: Main;
+            font-size: 10vh;
+        }
+
+        section.title{
+            max-width: 30vw;
+            left: 50%;
+            transform: translateX(-50%);
+            position: relative;
+            font-family: Main;
+            font-size: 6vh;
+            text-align: center;
+        }
+        
+        .list{
+            margin-top: 6vh;
+            position: absolute;
+            padding: 0%;
+            list-style: square;
+            font-family: Main;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+            font-size: 3vh;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px)
+// Mobile
+{
+    div.container{
         position: relative;
-        width: 50vw;
-        height: 50vh;
-        top: 50%;
-        transform: translateY(-50%);
-    }
+        width: 100vw;
+        height: 100vh;
 
-    .followers{
-        position: absolute;
-        width: 100%;
-        text-align: center;
-        font-family: Main;
-        font-size: 3vh;
-        color: gray;
-    }
 
-    .artist_name{
-        position: relative;
-        text-align: center;
-        font-family: Main;
-        font-size: 10vh;
-    }
+        .profile_img_bg{
+            position: absolute;
+            left: 50%;
+            width: 50%;
+            height: 100vh;
+            filter: blur(8px);
+            visibility: hidden;
+        }
 
-    section.title{
-        max-width: 30vw;
-        left: 50%;
-        transform: translateX(-50%);
-        position: relative;
-        font-family: Main;
-        font-size: 6vh;
-        text-align: center;
-    }
-    
-    .list{
-        margin-top: 6vh;
-        position: absolute;
-        padding: 0%;
-        list-style: square;
-        font-family: Main;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-        font-size: 3vh;
+        .profile_img_fg{
+            position: absolute;
+            left: 75%;
+            width: 30vw;
+            height: 30vw;
+            top: 50%;
+            transform: translate(-50%,-50%);
+        }
+
+        .infos{
+            text-align: center;
+            justify-content: center;
+            position: relative;
+            width: 50vw;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .followers{
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            font-family: Main;
+            font-size: 2.5vh;
+            color: gray;
+        }
+
+        .artist_name{
+            position: relative;
+            text-align: center;
+            font-family: Main;
+            font-size: 5vh;
+        }
+
+        section.title{
+            max-width: 30vw;
+            left: 50%;
+            transform: translateX(-50%);
+            position: relative;
+            font-family: Main;
+            font-size: 4vh;
+            text-align: center;
+        }
+        
+        .list{
+            margin-top: 5vh;
+            position: absolute;
+            padding: 0%;
+            list-style: square;
+            font-family: Main;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+            font-size: 2.5vh;
+        }
     }
 }
