Can't click disconnect issue resolved.

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -46,6 +46,7 @@ div.container{
         }
 
         div.icon-btn{
+            z-index: 2;
             position: absolute;
             height: max-content;
             margin: 15px;
