--- a/src/app/components/stat-display/stat-display.component.html
+++ b/src/app/components/stat-display/stat-display.component.html
@@ -1,6 +1,6 @@
 <div class="page">
 
-    <a [routerLink]="['stats', 'x', 'details']" class="see_all">See all >></a>
+    <a (click)="onSeeAllClick()" class="see_all">See all >></a>
 
     <div class="top_container">
         <!-- 1st most listened -->
