Add top artists page.

--- a/src/app/components/artists-display/artists-display.component.html
+++ b/src/app/components/artists-display/artists-display.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+
+    <a (click)="onSeeAllClick()" class="see_all">See all >></a>
+
     <img class="profile_img_bg" [src]="artists.items[0].images[0].url">
     <img class="profile_img_fg" [src]="artists.items[0].images[0].url">
     <div class="infos">
