--- a/src/app/components/stat-display/stat-display.component.scss
+++ b/src/app/components/stat-display/stat-display.component.scss
@@ -31,6 +31,7 @@
             text-align: center;
             transform: translate(-100%,-100%);
             color: blue;
+            cursor:pointer;
         }
 
         div.top_container{
