--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,67 +1,67 @@
 <div *ngIf="getToken() == null" class="container not-scrollable">
-    <div class="left_side">
-        <app-main-text 
-        leftText="We love your taste of music."
-        rightText="Get your Spotify stats, and be proud of your numbers!"
-        class="maintext"></app-main-text>
+  <div class="left_side">
+    <app-main-text
+      leftText="We love your taste of music."
+      rightText="Get your Spotify stats, and be proud of your numbers!"
+      class="main-text"></app-main-text>
 
-        <div (click)="onConnect()" class="icon-btn">
-            <img class="icon" src="assets/images/SpotifyIcon.svg">
-            <button href="#">Connect with Spotify</button>
-        </div>
-        
+    <div (click)="onConnect()" class="icon-btn">
+      <img alt="SpotifyApp logo" class="icon" src="assets/images/SpotifyIcon.svg">
+      <button>Connect with Spotify</button>
     </div>
 
-    <div class="right_side">
-        <img class="background" src="assets/images/featured.png">
+  </div>
 
-        <section>
-            <img class="foreground" src="assets/images/featured.png">
-            <span class="featured-txt">Featured: Casey Veggies</span>
-        </section>
-    </div>
+  <div class="right-side">
+    <img alt="featured img" class="background" src="assets/images/featured.png">
+
+    <section>
+      <img alt="featured img" class="foreground" src="assets/images/featured.png">
+      <span class="featured-txt">Featured: Casey Veggies</span>
+    </section>
+  </div>
 </div>
 
 <div *ngIf="getToken() != null" class="container">
 
-    <div (click)="onSignOut()" class="icon-btn">
-        <img class="icon" src="assets/images/SpotifyIcon.svg">
-        <button href="#">Disconnect from Spotify</button>
-    </div>  
+  <div (click)="onSignOut()" class="icon-btn">
+    <img alt="spotify icon" class="icon" src="assets/images/SpotifyIcon.svg">
+    <button>Disconnect from Spotify</button>
+  </div>
 
-    <div class="loadingcontainer" *ngIf="isLoaded == false">
-        <app-main-text 
-        leftText="We reading your stats..."
-        rightText="There's a lot of interesting things about you!"
-        class="maintext">
-        </app-main-text>
-        <app-infinite-load-bar></app-infinite-load-bar>    
-    </div>
-    <div class="statcontainer" *ngIf="isLoaded == true">
-        <app-artists-display
-        title="in the past 4 week"
-        [artists]="shortTermTopArtists"
-        term="short_term"></app-artists-display><br>
-        <top-tracks-display
-        title="in the past 4 week"
-        [tracks]="shortTermTopTracks"
-        term="short_term"></top-tracks-display><br>
-        <app-artists-display
-        title="in the past 3 months"
-        [artists]="medTermTopArtists"
-        term="med_term"></app-artists-display><br>
-        <top-tracks-display
-        title="in the past 3 months"
-        [tracks]="medTermTopTracks"
-        term="med_term"></top-tracks-display><br>
-        <app-artists-display
-        title="of all time"
-        [artists]="longTermTopArtists"
-        term="long_term"><br>
-        </app-artists-display><br>
-        <top-tracks-display
-        title="of all time"
-        [tracks]="longTermTopTracks"
-        term="long_term"></top-tracks-display><br>
-    </div>
+  <div class="stat-container">
+    <app-artists-display
+      title="in the past 4 week"
+      [artists]="getArtistByTerm(terms.SHORT_TERM)"
+      term="short_term"></app-artists-display>
+    <br>
+
+    <app-top-tracks-display
+      title="in the past 4 week"
+      [tracks]="getTracksByTerm(terms.SHORT_TERM)"
+      term="short_term"></app-top-tracks-display>
+    <br>
+
+    <app-artists-display
+      title="in the past 3 months"
+      [artists]="getArtistByTerm(terms.MED_TERM)"
+      term="med_term"></app-artists-display>
+    <br>
+    <app-top-tracks-display
+      title="in the past 3 months"
+      [tracks]="getTracksByTerm(terms.MED_TERM)"
+      term="med_term"></app-top-tracks-display>
+    <br>
+    <app-artists-display
+      title="of all time"
+      [artists]="getArtistByTerm(terms.LONG_TERM)"
+      term="long_term"><br>
+    </app-artists-display>
+    <br>
+    <app-top-tracks-display
+      title="of all time"
+      [tracks]="getTracksByTerm(terms.LONG_TERM)"
+      term="long_term"></app-top-tracks-display>
+    <br>
+  </div>
 </div>
